# RACEJenkinsAnalysis

./: .env.example  .gitignore  README.md  app.py  jenkins_client.py  models.py  pipeline.py  pyproject.toml  requirements.lock.txt
config/: contexts.json  rules.yaml
config/job_lists/: SAMPLE-custom-list.json  api-smoke-sit.json  frontend-regression-preprod.json  ui-regression-dev.json
config/rules/: 01-timeout.yaml  02-ui-locator.yaml  03-browser-session.yaml  04-api-backend.yaml  05-environment.yaml  06-assertion.yaml  07-test-data.yaml  08-automation.yaml  09-build-config.yaml  HOW-TO-ADD-A-RULE.md  _meta.yaml
jjat/: __init__.py  application.py  jenkins_client.py  models.py  pipeline.py
jjat/lib/: __init__.py  credentials.py  jenkins_factory.py  jenkins_urls.py  sse.py  state.py  timeutils.py
jjat/routes/: __init__.py  _streaming.py  analysis.py  auth.py  console.py  dashboard.py  fetch.py  refresh.py  rerun.py  views.py
mock/: mock_data.py  mock_server.py
race/: __init__.py  application.py  jenkins_client.py  models.py  pipeline.py
race/lib/: __init__.py  build_cache.py  classifier_reloader.py  credentials.py  jenkins_factory.py  jenkins_urls.py  security.py  sse.py  state.py  timeutils.py
race/routes/: __init__.py  _streaming.py  analysis.py  auth.py  classify_test.py  console.py  dashboard.py  fetch.py  refresh.py  rerun.py  views.py
rules-bootstrap/: README.md  bootstrap_rules.py  rules.report.txt  rules.yaml  sample.json
scripts/: lock.sh  setup.ps1  setup.sh  token-help.sh
setup/: setup.ps1  setup.sh
static/css/: dashboard-theme.css  dashboard.css
static/js/: app.js  auto-refresh.js  clv.js  config.js  diagnostics.js  filters.js  kpi.js  motion.js  promotion.js  rendering.js  rule-test.js  saved-views.js  selection-enhancements.js  state.js  streaming.js  theme.js  toolbar.js  utils.js
templates/: dashboard.html
templates/partials/: _icon_sprite.html
