[project]
name = "jjat"
version = "0.1.0"
description = "Jenkins Job Analysis Tool — local dashboard for release validation and failure classification."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Sudhindra Immidi" }]

dependencies = [
    "Flask>=3.0",
    "requests>=2.31",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.0",
]

# Hatchling — zero-config build backend.  Needed for `pip install -e .`
# to make `import jjat` work from anywhere.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jjat"]


[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["mock"]   # mock_server has long data tables that don't lint cleanly

[tool.ruff.lint]
# E/F/W = pycodestyle / pyflakes basics
# I     = isort import ordering
# N     = pep8-naming
# UP    = pyupgrade (modernise syntax for current Python target)
# B     = flake8-bugbear (likely bugs)
# C4    = flake8-comprehensions
# SIM   = flake8-simplify
# RET   = flake8-return
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "RET"]
ignore = [
    "E501",   # line-too-long — handled by formatter, not strict
    "B008",   # function calls in argument defaults — Flask uses them legitimately
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


# ---------------------------------------------------------------------------
# mypy — static type checking.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.8"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["^mock/", "^scripts/", "^build/", "^dist/"]
